Fixed nav-toggle visibility
Added visibility: hidden to .nav-toggle

--- a/Basic/astro-basic.css
+++ b/Basic/astro-basic.css
@@ -97,6 +97,7 @@ img, audio, video, canvas { max-width: 100%; }
  *  Only needed for expand-and-collapse option. */
 .nav-toggle {
     display: none;
+    visibility: hidden;
 }
 
 
@@ -111,6 +112,7 @@ img, audio, video, canvas { max-width: 100%; }
     /*  Display navigation toggle button if javascript is supported */
     .js .nav-toggle {
         display: block;
+        visibility: visible;
     }
 
     /*  Hide navigation items if javascript is supported */
