--- a/Stacked/astro-stacked.css
+++ b/Stacked/astro-stacked.css
@@ -92,6 +92,7 @@ img, audio, video, canvas { max-width: 100%; }
  *  Only needed for expand-and-collapse option. */
 .nav-toggle {
     display: none;
+    visibility: hidden;
 }
 
 
@@ -106,6 +107,7 @@ img, audio, video, canvas { max-width: 100%; }
     /*  Display navigation toggle button if javascript is supported */
     .js .nav-toggle {
         display: block;
+        visibility: visible;
         float: right;
     }
 
